- desk/deskmain.c: Removed dead DBG_DESKMAIN. (VRI)
- Makefile, bios/comprimg.S: Use tosvars.S instead of redefining the
  variables. (VRI)
- bios/comprimg.S, util/uncompr.S: Added ColdFire support. (VRI)
- Makefile: Added missing PHONY targets. (VRI)
- Makefile: Added a rule to build .s19 files. (VRI)
- Makefile: Added easily overridable VMA variable. (VRI)

2011-08-16
- Makefile: Disabled special .exe handling no more useful on Cygwin. (VRI)
- *.S: Replaced .xdef by .extern. (VRI)
- bios/screen.c, bios/screen.h: Fixed the STe default palette. (VRI)
- Makefile, bios/bios.c, bios/dmasound.c, bios/dmasound.h, bios/machine.c,
  bios/machine.h: Added LMC1992 initialization. (VRI)
- bios/dmasound.c, bios/machine.c, bios/machine.h: Moved DMA sound detection
  to the right place. (VRI)

2011-08-17
- bdos/fs.h, bdos/fsfat.c, bdos/fsio.c, bdos/fsopnclo.c: Big partition support
  part 1. Remove the test for negative cluster numbers. Contributed by Roger
  Burrows. (VRI)
- bios/memory.S: Fix the stack after calling check_read_byte() to avoid
  potential stack overflow. (VRI)
- bios/memory.S: Added support for up to 14 MB ST-RAM on cold boot. (VRI)
- aes/gemstart.S, bios/memory.S: Replaced bsr by jsr to call externals. (VRI)
- desk/desksupp.c: Run FORMAT.TTP in text mode. (VRI)
- desk/desk_rsc.c, po/*.po: Changed the message when the format program is not
  found. It was too long in the french translation and crashed. (VRI)

2011-08-18
- bios/dmasound.c, bios/machine.h: Improved Microwire detection. (VRI)
- bios/machine.c, bios/cookie.h: Added Falcon DMA sound to _SND cookie. (VRI)
- bdos/fs.h, bdos/fsfat.c, bdos/fsio.c: Big partition support part 2.
  Change the types of variables used in cluster handling. Contributed by Roger
  Burrows. (VRI)
- vdi/vdi_raster.c: Fixed the C implementation of bit_blt() when the destination
  width is spanning a single word (usually width <= 16 pixels). This was visible
  when moving a window slightly on the right over an icon. (VRI)